# function(glob_directories _OUTVAR _PATH)
#     set(DIRECTORIES )
#     file(GLOB FILES "${_PATH}" "*")
# message("${FILES}")
#     foreach(F ${FILES})
# message("${F}")
#         if(IS_DIRECTORY ${F} AND NOT ${F} STREQUAL "CMakeFiles")
#             list(APPEND DIRECTORIES ${F})
#         endif(IS_DIRECTORY ${F} AND NOT ${F} STREQUAL "CMakeFiles")
#     endforeach(F)
#     set(${_OUTVAR} ${DIRECTORIES} PARENT_SCOPE)
# endfunction(glob_directories)
#
# glob_directories(DRIVERS_LIST ${CMAKE_CURRENT_SOURCE_DIR})
# message("DRIVERS_LIST = ${DRIVERS_LIST}")
# foreach(DRIVER ${DRIVERS_LIST})
# message("${DRIVER}")
#     add_subdirectory(${DRIVER})
# endforeach(DRIVER)

if(WITH_REDIS)
    add_subdirectory(redis)
endif(WITH_REDIS)
if(WITH_MEMCACHED)
    add_subdirectory(memcached)
endif(WITH_MEMCACHED)

set(STATIC_DRIVERS ${STATIC_DRIVERS} PARENT_SCOPE)
set(ADDITIONNAL_LIBRARIES ${ADDITIONNAL_LIBRARIES} PARENT_SCOPE)
